# glab-search-code

./: .gitignore  README.md  gitlab_code_search.py  glab_code_search.py  pyproject.toml
docs/plans/: 2026-02-17-group-scoped-search-design.md
glab_search_code/: __init__.py
